Version 2.2:

	* Fix cross-test to pass.
	* Fix DBusViewer.sh *again* (Spotted by Serkan Kaba <serkan_kaba
			-at- yahoo -dot- com>)
	* Add DBusCall
	* fix CreateInterface to put DBusException in the right package in import
		statements. Spotted by Steve Crane <Steve -dot- Crane -at- rococosoft
		-dot- com>

Version 2.1:

	* make scripts with $JAVA
	* fix DBusViewer.sh (Spotted by Luigi Paioro <luigi -at- lambrate -dot-
			inaf -dot- it>

Version 2.0:
	
	* Remove libdbus-1 dependency and talk the wire protocol directly
	* Add dependency on http://www.matthew.ath.cx/projects/java/ unix, debug
     and hexdump libraries
	* API changes:
		* Exceptions (including DBusException and DBusExecutionException) moved
	 	  to the org.freedesktop.dbus.exceptions package.
		* Convert/deserialize and dbus<->java type conversion code moved from
		  org.freedesktop.dbus.DBusConnection to org.freedesktop.dbus.Marshalling.
		* Types moved to the org.freedesktop.dbus.types package.
		* All message metadata methods have been moved to the superclass and
		  getObjectPath() has been renamed to getPath().
		* Deprecated method registerService has been removed.
		* getUniqueName() and getNames() methods added to get the bus names
		  associated with this connection.
		* Access to the low-level API added.
	* Change all documentation to refer to 'implementation' not 'binding'
	* Add peer 2 peer support with DirectConnection class
	* add peer to peer test
	* split some code from DBusConnection into common super-class
	  AbstractConnection
	* Support float ('f') type with tests
	* Degrade floats to doubles when DBUS_JAVA_FLOATS is not set
	* add DBus.Peer interface to standard introspection data
	* Document peer to peer and low level.
	* Fix TCP and SHA-1 auth
	* fix wrapper scripts with new depends
	* add a DBusDaemon
	* Make daemon multithreaded; performance improvements
	* Add sending thread to library, move to blocking IO
	* Ensure key directory exists when serving cookie auth