@@ -11,9 +11,9 @@ org.freedesktop.dbus.DBusConnection = ERR
 org.freedesktop.dbus.AbstractConnection$1 = ERR
 org.freedesktop.dbus.DBusSignal = ERR
 org.freedesktop.dbus.EfficientQueue = ERR
-org.freedesktop.dbus.Transport = VERBOSE
-org.freedesktop.dbus.Transport$SASL = VERBOSE
-org.freedesktop.dbus.Transport$SASL$Command = VERBOSE
+org.freedesktop.dbus.Transport = ERR
+org.freedesktop.dbus.Transport$SASL = ERR
+org.freedesktop.dbus.Transport$SASL$Command = ERR
 org.freedesktop.dbus.Marshalling = ERR
 org.freedesktop.dbus.BusAddress = ERR
 org.freedesktop.dbus.RemoteInvocationHandler = ERR
