@@ -7,6 +7,7 @@ Version 2.2:
 	* fix CreateInterface to put DBusException in the right package in import
 		statements. Spotted by Steve Crane <Steve -dot- Crane -at- rococosoft
 		-dot- com>
+	* Update Cross-test to new spec
 
 Version 2.1:
 
